--- a/package.json
+++ b/package.json
@@ -25,6 +25,6 @@
   },
   "homepage": "https://github.com/mixmaxhq/rollup-plugin-handlebars-plus#readme",
   "peerDependencies": {
-    "handlebars": "^4.0.5"
+    "handlebars": ">= 1.3.0 < 5"
   }
 }
